Finished CRUD operation
