# Project_1/api/controllers/contactsController.js
@@ -41,7 +41,7 @@ contactsController.addContact = async (req, res) => {
             lastName,
             email,
             favoriteColor,
-            birthDate
+            birthDate: new Date(birthDate)
         });
         res.status(201).json(addContact);
     } catch (err) {
@@ -55,7 +55,7 @@ contactsController.getContacts = async (req, res) => {
         const client = await getClient();
         const allContacts = await client.db("contacts").collection("contacts");
 
-        allContacts.find().toArray().then((contacts) => {
+        await allContacts.find().toArray().then((contacts) => {
             res.setHeader("Content-Type", "application/json");
             res.status(200);
             res.json(contacts);
@@ -63,7 +63,7 @@ contactsController.getContacts = async (req, res) => {
 
     } catch (err) {
         console.error(err);
-        res.status(500).json({ message: "Failed to fetch contacts", error: err.message });
+        res.status(500).json({ message: "Error fetching contacts", error: err.message });
     }
 }
 
@@ -74,7 +74,7 @@ contactsController.getSingleContact = async (req, res) => {
         const client = await getClient();
         const allContacts = await client.db("contacts").collection("contacts");
 
-        allContacts.find({ _id: contactId }).toArray().then((contacts) => {
+        await allContacts.find({ _id: contactId }).toArray().then((contacts) => {
             res.setHeader("Content-Type", "application/json");
             res.status(200);
             res.json(contacts[0]);
@@ -82,7 +82,49 @@ contactsController.getSingleContact = async (req, res) => {
 
     } catch (err) {
         console.error(err);
-        res.status(500).json({ message: "Failed to fetch contacts", error: err.message });
+        res.status(500).json({ message: "Error fetching contact", error: err.message });
+    }
+}
+
+contactsController.updateContact = async (req, res) => {
+    try {
+        const contactId = new ObjectId(req.params.id);
+        let firstName = req.body.firstName;
+        let lastName = req.body.lastName;
+        let email = req.body.email;
+        let favoriteColor = req.body.favoriteColor;
+        let birthDate = req.body.birthDate;
+        const client = await getClient();
+        const allContacts = await client.db("contacts").collection("contacts");
+
+        await allContacts.replaceOne({ _id: contactId }, {
+            firstName,
+            lastName,
+            email,
+            favoriteColor,
+            birthDate: new Date(birthDate)
+        });
+        res.setHeader("Content-Type", "application/json");
+        res.status(200).json({ message: "Contact updated sucessfully!" });
+
+    } catch (error) {
+
+        res.status(500).json({ message: 'Error updating contact', error: err });
+    }
+}
+
+contactsController.deleteContact = async (req, res) => {
+
+    try {
+        const contactId = new ObjectId(req.params.id);
+        const client = await getClient();
+
+        await client.db("contacts").collection("contacts").deleteOne({ _id: contactId });
+
+        res.status(200).json({ message: "Contact deleted successfully!" });
+
+    } catch (error) {
+        res.status(500).json({ message: "Error deleting contact", error: err.message })
     }
 }
 
